--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 - upload build artifacts to VPS
   - also setup irc bot/code documentation/web services again (should be easier
     with Docker image as base)
-- fedora/openSUSE/arch docker files (build-only)
-- mac os x build (on travis)
+- openSUSE docker file (build-only)
 - windows build (appveyor?)
