update to f7b990b1aa8adee23ee63b4f0f521e66ada4b7bc; minor fixes

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 - upload build artifacts to VPS
-  - also setup irc bot/code documentation/web services again (should be easier
-    with Docker image as base)
-- openSUSE docker file (build-only)
+- openSUSE docker file (build only)
 - windows build (appveyor?)
+- fix locale when running in docker (run e.g. 'python openteacher.py -p cli authors')
